package com.directi.training.ocp.exercice_refactored;

public class Space implements Slot {
    public void markSlotFree(int resourceId)
    {
    }

     public void markSlotBusy(int resourceId)
    {
    }

     public int findFreeSlot()
    {
        return 0;
    }

}
